plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.11'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8' // 프로젝트의 Java 버전에 맞게 설정
targetCompatibility = '1.8' // 프로젝트의 Java 버전에 맞게 설정

repositories {
	mavenCentral()
}

compileJava {
    options.compilerArgs += ['-g']
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	implementation 'org.projectlombok:lombok:1.18.20'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation group: 'org.bgee.log4jdbc-log4j2', name:'log4jdbc-log4j2-jdbc4.1', version: '1.16'
	// https://mvnrepository.com/artifact/org.jsoup/jsoup
	implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'
	// https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
	
	implementation group: 'org.json', name: 'json', version: '20160810'
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
	 // Slack
    implementation "net.gpedro.integrations.slack:slack-webhook:1.4.0"
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
    implementation 'jakarta.activation:jakarta.activation-api:2.0.1'
    
    // Junit5 테스트
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
